alignment fix

--- a/src/app/products-templates/products-templates.component.scss
+++ b/src/app/products-templates/products-templates.component.scss
@@ -81,7 +81,7 @@
 .search{
   margin-left: 40px;
   margin-top: 30px;
-  width: 78%;
+  width: 75%;
 }
 
 .addButton{
